--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "tiny-emitter": "^2.1.0",
+    "vee-validate": "^4.13.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-axios": "^3.5.2",
+    "vue-router": "^4.4.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -26,15 +32,18 @@
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^9.8.8",
     "babel-jest": "^27.0.6",
     "cypress": "^9.7.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^7.20.0",
     "jest": "^27.0.5",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
